# ProjectMary

./: CMakeLists.txt  main.cpp
include/Controllers/: Controller.hpp
include/EntryStorage/: Entry.hpp  EntryVector.hpp
include/TableModels/: EntryListModel.hpp
qml/: AddTaskDialog.qml  Colors.qml  DetailPanel.qml  EditTaskDialog.qml  Main.qml  TaskDetailPanel.qml  TasksList.qml
src/Controllers/: controller.cpp
src/TableModels/: EntryListModel.cpp
